--- a/com.core.istore.RunGitPull.plist
+++ b/com.core.istore.RunGitPull.plist
@@ -6,10 +6,7 @@
 	<string>com.core.istore.RunGitPull.plist</string>
 	<key>ProgramArguments</key>
 	<array>
-		<string>/usr/bin/git</string>
-		<string>-C</string>
-		<string>/Library/iStores</string>
-		<string>pull</string>
+		<string>/Library/iStores/Pull_and_Add_Model_Script</string>
 	</array>
 	<key>RunAtLoad</key>
 	<true/>
